# spec-validator

./: .editorconfig  AGENTS.md  LICENSE  package-lock.json  package.json  pyproject.toml  tsconfig.json
.agents/spec-csharp-validator/: SKILL.md
.agents/spec-csharp-validator/agents/: openai.yaml
.agents/spec-csharp-validator/references/: csharp-profile.md  layout.md
.agents/spec-naming-validator/: SKILL.md
.agents/spec-python-validator/: SKILL.md
_docs/_Documents/: 10_domain-rule.yaml
_docs/_GroundRules/: 00_standard-language-csharp.yaml  00_standard-language-ddd.yaml  00_standard-language-python.yaml  01_domain-terms.yaml  10_test-rules.yaml  20_spec-structure.yaml  21_spec-authoring-rules.yaml  30_architecture-layer-rules.yaml  40_security-rules-python.yaml  40_security-rules-typescript.yaml  40_security-rules.yaml  41_typescript-module-rules.yaml
_docs/_Specs/: README.md
reports/: csharp-architecture-fail-report.md  csharp-architecture-pass-report.md  csharp-fail-report.md  csharp-pass-report.md  csharp-security-fail-report.md  csharp-security-pass-report.md  nestjs-fail-report.md  nestjs-pass-report.md  python-security-fail-report.md  python-security-pass-report.md  spec-structure-samples-report.md  spec-structure-specs-report.md  traceability-fail-report.md  traceability-pass-report.md  typescript-security-fail-report.md  typescript-security-pass-report.md
samples/auth/screens/: login.yaml
src/spec_validator/: __init__.py  architecture_validator.py  naming_validator.py  security_validator.py  spec_structure_validator.py  traceability_validator.py
(+76 files in other folders)
